Implement search bar interface

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       type="image/x-icon"
       href="./src/assets/Keddit_Logo_No_Text.png"
     />
+    <script
+      src="https://kit.fontawesome.com/8bd6d55e6c.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Keddit</title>
   </head>
